tests/testcases/valid/classes/17_this_nested_method_calls.ciel
// Test 'this' in nested method calls and complex expressions

class Counter {
    public:
        int count;

        int get_count() {
            return this->count;
        }

        void set_count(int new_count) {
            this->count = new_count;
            return;
        }

        void increment() {
            this->set_count(this->get_count() + 1);
            return;
        }

        void add(int value) {
            this->set_count(this->get_count() + value);
            return;
        }

        int double_count() {
            return this->count * 2;
        }
};

int main() {
    class Counter c;
    c.count = 5;
    c.increment();
    c.add(10);
    int result = c.double_count();
    if (result == 32) {
        return 0;
    }
    return 1;
}
